adds more examples, including the ones from lecture-21/leic51d

--- a/code/js/react-intro/public/index.html
+++ b/code/js/react-intro/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="main.js" type="module"></script>
+    <script src="/main.js" type="module"></script>
   </head>
   <body>
     <h1 id="main-heading">Hello React</h1>
